correct small alignment issues

--- a/src/app/billboard-bottom/billboard-bottom.component.scss
+++ b/src/app/billboard-bottom/billboard-bottom.component.scss
@@ -19,7 +19,7 @@ div{
       .billboard{
         position: relative;
         left:0;
-        width:100vw;
+        width: calc(100vw - (100vw - 100%));
         height:74vh;
         background-size: cover;
       }
