--- a/src/app/billboard-main/billboard-main.component.scss
+++ b/src/app/billboard-main/billboard-main.component.scss
@@ -7,7 +7,7 @@ div{
 
     .billboard{
       left:0;
-      width:100vw;
+      width: calc(100vw - (100vw - 100%));
       height:74vh;
       background-size: cover;
       position: relative;
